# 3D-Programming

./: .gitignore
3D-Programming/: GLSandbox.vcxproj  GLSandbox.vcxproj.filters
3D-Programming/Debug/: vc142.idb
3D-Programming/Debug/GLSandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GLSandbox.lastbuildstate
3D-Programming/models/: BlockKitty.fbx  Cube.fbx  FBX_Man.fbx  cubeMan.fbx
3D-Programming/models/xenoblade/: blender_users.txt  dunban.dae  dunban.fbx  fiora.dae  fiora.fbx  riki.dae  riki.fbx  shulk.dae  shulk_c07.dae  shulk_c07.fbx
3D-Programming/src/: AnimatedModel.cpp  AnimatedModel.h  InputHandler.cpp  InputHandler.h  Joint.h  Model.cpp  Shaders.cpp  Shaders.h  Triangle.cpp  Triangle.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  main.cpp
3D-Programming/x64/Debug/: GLSandbox.ilk  GLSandbox.vcxproj.FileListAbsolute.txt  shaders.new.obj.enc  vc142.idb
3D-Programming/x64/Debug/GLSandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GLSandbox.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
3D-Programming/x64/Release/: GLSandbox.iobj
3D-Programming/x64/Release/GLSandbox.tlog/: CL.read.1.tlog  CL.write.1.tlog  link.read.1.tlog  (+3 more)
cmake/src/: main.cpp
glsandbox/: GLSandbox.vcxproj  GLSandbox.vcxproj.filters  Model.cpp  Model.h  Shaders.h  Triangle.h
glsandbox-cmake/: CMakeLists.txt
glsandbox/models/: Monado.mtl
glsandbox/src/: Model.h  Shaders.h  Triangle.h  main.cpp
glsandbox/x64/Debug/: GLSandbox.ilk  vc141.idb  vc142.idb
glsandbox/x64/Release/: GLSandbox.ipdb
(+9 files in other folders)
